# WikiAziendale

./: .env.example  .gitignore  COME-FUNZIONA.md  README.md  docker-compose.yml  start.bat
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: fdbf5de59fe6_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: compiler.py  query.py
backend/app/agents/prompts/: compiler.md  query.md
backend/app/api/: chat.py  procedures.py  wiki.py
backend/app/core/: db.py  llm.py  security.py
backend/app/models/: __init__.py  compilation_log.py  procedure_raw.py  procedure_wiki.py  wiki_index.py
backend/app/schemas/: chat.py  procedure.py  wiki.py
backend/app/services/: compilation.py
backend/tests/: conftest.py  test_chat.py  test_compilation_service.py  test_compiler_tools.py  test_config.py  test_llm_factory.py  test_models_import.py  test_procedures.py  test_schemas.py  test_security_dep.py  test_wiki.py
docs/: MANUALE-TECNICO.md  MANUALE-UTENTE.md  hardware-llm.html  manuale-tecnico.html  manuale-utente.html
docs/superpowers/plans/: 2026-04-20-document-upload.md  2026-04-20-query-agent-chat.md  2026-04-20-wiki-browser.md
docs/superpowers/specs/: 2026-04-20-document-upload-design.md  2026-04-20-query-agent-chat-design.md  2026-04-20-wiki-browser-design.md
fixtures/: sample_procedures.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  client.ts  procedures.ts  wiki.ts
(+7 files in other folders)
